# GameinSDL

./: CMakeLists.txt  CMakeLists_Win.txt  Makefile  README.md  run.bat
hdr/: define.h  game.h
src/: game.cpp  main.cpp
